# P4Arm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  config.yaml  config.yaml.template  rebuild.sh
docs/: api.md
example/: api.py  tcp.py
include/: handles.h  read_config.h
include/Hsu/: arm.h  frame.h  grip.h  hand.h  hsu_module_log.h  matrix_ops.h  modbus_tcp.h  tcp.h
include/RMArm/: rm_define.h  rm_interface.h  rm_interface_global.h  rm_service.h  rm_version.h
py_scripts/: mesh_util.py  plot_controller.py  requirements.txt  vispy_plot.py  vispy_robot.py  vispy_scene.py
scripts/: _p4net_bash.sh  _p4net_reset.sh  _p4net_set.sh  p4net.sh
src/: handles.cpp  main.cpp  read_config.cpp
src/Hsu/: arm.cpp  frame.cpp  grip.cpp  hand.cpp  matrix_ops.cpp  modbus_tcp.cpp  tcp.cpp
tmp/: tmp.cpp
